chore: .gitignore에 *.json 추가

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ HELP.md
 
 *.yml
 *.yaml
+
+# ===============================================================
+# Credentials & Sensitive Info (인증서 및 민감 정보)
+# ===============================================================
+*.json
